# ODataServer

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Config.cmake.in  GoogleTest.cmake  ODataServiceDocument.cpp  ODataURLParser.h  Package.cmake  README.md
src/: CMakeLists.txt  OData  OData.h  ODataAction.cpp  ODataAction.h  ODataEntity.cpp  ODataEntity.h  ODataEntityContainer.cpp  ODataEntityContainer.h  ODataEntityInterface.cpp  ODataEntityInterface.h  ODataEntitySet.cpp  ODataEntitySet.h  ODataFilter.cpp  ODataFilter.h  ODataFunction.cpp  ODataFunction.h  ODataModel.cpp  ODataModel.h  ODataServer_global.h  ODataServiceDocument.h  ODataSingleton.cpp  ODataSingleton.h  ODataURLParser.cpp  odataentitycontroller.cpp  odataentitycontroller.h  odatarequesthandler.cpp  odatarequesthandler.h
src/interface/: ODataEntityInterface.cpp  ODataEntityInterface.h  odataentitycontroller.cpp  odataentitycontroller.h
src/model/: CMakeLists.txt  OData.h  ODataAction.cpp  ODataAction.h  ODataEntity.cpp  ODataEntity.h  ODataEntityContainer.cpp  ODataEntityContainer.h  ODataEntitySet.cpp  ODataEntitySet.h  ODataFunction.cpp  ODataFunction.h  ODataModel.cpp  ODataModel.h  ODataNavigationProperty.cpp  ODataNavigationProperty.h  ODataProperty.cpp  ODataProperty.h  ODataReference.cpp  ODataReference.h  ODataSchema.cpp  ODataSchema.h  ODataSingleton.cpp  ODataSingleton.h
src/request/: CMakeLists.txt  OData.h  ODataException.cpp  ODataException.h  ODataFilter.cpp  ODataFilter.h  ODataURLParser.cpp  ODataURLParser.h  ODataURLWalk.cpp  ODataURLWalk.h  odatarequesthandler.cpp  odatarequesthandler.h
src/response/: OData.h  ODataMetadata.cpp  ODataMetadata.h  ODataServiceDocument.cpp  ODataServiceDocument.h
tests/: CMakeLists.txt  ODataTest.precompiled.h  ODataTestEntity.cpp  ODataTestEntity.h  ODataTestEntity2.cpp  ODataTestEntity2.h  ODataTestEntitySet.cpp  ODataTestEntitySet.h  ODataTestEntitySet2.cpp  ODataTestEntitySet2.h  main.cpp  tst_odataentityplugin.cpp  tst_odataentityplugin.h  tst_odataurlparsing.cpp  tst_odataurlparsing.h
tests/gtest/: CMakeLists.txt.in
tests/tst_odataentityplugin/: CMakeLists.txt  ODataTestEntity.cpp  ODataTestEntity2.cpp  ODataTestEntityProvider.cpp  ODataTestEntityProvider.h  ODataTestEntitySet.cpp  ODataTestEntitySet.h  ODataTestEntitySet2.cpp  ODataTestEntitySet2.h  odatatestcontroller1.cpp  odatatestcontroller1.h  odatatestcontroller2.cpp  odatatestcontroller2.h  tst_odataentityplugin.cpp
tests/tst_odataentityplugin/tst_odataentityplugin_plugin_lib/: CMakeLists.txt  ODataTestEntity.cpp  ODataTestEntity.h  ODataTestEntity2.cpp  ODataTestEntity2.h  ODataTestEntityProvider.cpp  ODataTestEntityProvider.h  ODataTestEntityProvider.json  ODataTestEntitySet.cpp  ODataTestEntitySet.h  ODataTestEntitySet2.cpp  ODataTestEntitySet2.h  odatatestcontroller1.cpp  odatatestcontroller1.h  odatatestcontroller2.cpp  odatatestcontroller2.h
tests/tst_odataentityplugin_plugin_lib/: CMakeLists.txt  ODataTestEntity2.h  ODataTestEntityProvider.cpp  ODataTestEntityProvider.h  ODataTestEntitySet.cpp  ODataTestEntitySet.h  ODataTestEntitySet2.cpp  ODataTestEntitySet2.h
tests/tst_odataurlparsing/: CMakeLists.txt  tst_odataurlparsing.cpp
